@@ -139,6 +139,9 @@ Release 0.9.11
 	getProductForModel() [templates: review.php, product_info.php,
 	account_notifications.php, manufacturers_info.php (box)]
 - make languageId mandatory for ZMProducts::updateViewCount()
+- change coupon restriction class (category/product) to require a languageId 
+  parameter as the languageId is not available at that level;
+	templates: coupon_help.php, discount_coupon_info.php
 
 Release 0.9.10
 - restructure store and admin code into separate apps with most of the store
